@@ -342,8 +342,9 @@ let rec depends_of_gen_tactic_expr depends_of_'constr depends_of_'ind depends_of
     (* Constructors *)
     | TacLeft        (_,cb)
     | TacRight       (_,cb)
-    | TacSplit       (_, _, cb)
+    | TacSplit       (_, _, [cb])
     | TacConstructor (_, _, cb) -> depends_of_'a_bindings depends_of_'constr cb acc
+    | TacSplit       _ -> failwith "TODO"
     | TacAnyConstructor (_,taco) -> Option.fold_right depends_of_'tac taco acc
 
     (* Conversion *)
