@@ -98,7 +98,7 @@ val h_revert          : identifier list -> tactic
 val h_constructor     : evars_flag -> int -> open_constr bindings -> tactic
 val h_left            : evars_flag -> open_constr bindings -> tactic
 val h_right           : evars_flag -> open_constr bindings -> tactic
-val h_split           : evars_flag -> open_constr bindings -> tactic
+val h_split           : evars_flag -> open_constr bindings list -> tactic
 
 val h_one_constructor : int -> tactic
 val h_simplest_left   : tactic
