@@ -29,6 +29,8 @@ Tactics
 - New variant "subst'" of "subst" that supports JMeq.
 - New tactic "decide lemma with hyp" for rewriting decidability lemmas
   when one knows which side is true.
+- Tactic "exists" and "eexists" supports iteration using
+  comma-separated arguments.
 
 Tactic Language
 
